# Labiagi-Homework

./: LICENSE.md  README.md
HW1/: README.md  orazio_wrapper.cpp  orazio_wrapper_test.cpp
HW2/: README.md
HW2/src/mapper/: mapper.cpp
HW2/src/node/: laser_mapper_node.cpp
HW3/: README.md
HW4/: CMakeLists.txt  README.md  package.xml
HW4/src/: CMakeLists.txt
HW4/src/graphic/: CMakeLists.txt  hw1OpenCv.cpp  hw1OpenCv.h
HW4/src/node/: CMakeLists.txt  alberto_node.cpp  alberto_node_sub.cpp
HW5-IG/: CMakeLists.txt  README.md  package.xml
HW5-IG/src/: CMakeLists.txt
HW5-IG/src/node/: CMakeLists.txt  bartolo_gicp_node.cpp  bartolo_node.cpp  bartolo_rosbag_node.cpp  bartolo_visualizer.cpp
HW5-IG/src/pcl/: CMakeLists.txt  bartolo.cpp  bartolo.h
HW6-IG/: CMakeLists.txt  README.md  package.xml
HW6-IG/src/: CMakeLists.txt
HW6-IG/src/face/: CMakeLists.txt  calogero.cpp  calogero.h
HW6-IG/src/node/: CMakeLists.txt  calogero_node.cpp
